07_Learn-Kubernetes/K8s/k8s_yaml_files/03_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: custom-app01-namespace
  labels:
    app: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-3
  namespace: custom-app01-namespace
  labels:
    tier: front
    env: dev
spec:
  containers:
    - name: nginx-cont
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: development-namespace
  labels:
    env: development
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-2
  namespace: development-namespace
  labels:
    env: dev
    tier: frontend
spec:
  containers:
  - name: cont-1
    image: nginx:kube
    ports:
    - containerPort: 80 # Documenting the port
