07_Learn-Kubernetes/K8s/k8s_yaml_files/05_deployment.yaml
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: deployment-test-ns
#   labels:
#     env: dev
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: deploy1
#   namespace: deployment-test-ns
#   labels:
#     tier: frontend

# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       tier: frontend
#   template:
#     metadata: 
#       name: nginx-pod # will not be used, as the deployments set randoms name to the pods 
#       namespace: default
#       labels:
#         tier: frontend
#     spec:
#       containers: 
#         - name: nginx-cont
#           image: nginx:kube
#           ports:  
#             - containerPort: 80
#               protocol: TCP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      name: pod
  template:
    metadata:
      labels:
        name: pod 
    spec:
      containers:
      - name: container
        image: busybox
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c", "sleep infinity"]

---
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  labels:
    name: pod
spec:
  containers:
  - name: pod-2-cont
    image: busybox
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh"]
    args:
    - -c
    - sleep infinity
