07_Learn-Kubernetes/K8s/k8s_yaml_files/06_rollout_scaling.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deployment-1
  template:
    metadata:
      labels:
        app: deployment-1
    spec:
      containers:
      - image: nginx:latest   # updated image here
        name: nginx
