07_Learn-Kubernetes/K8s/k8s_yaml_files/08_hpa.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
            - name: hpa-deploy-cont
              image: nginx
              imagePullPolicy: IfNotPresent
              ports:
              - containerPort: 80   
              resources:
                  limits:
                      cpu: "200m"
                      memory: "250Mi"
                  requests:
                      cpu: "150m"
                      memory: "100Mi"
