07_Learn-Kubernetes/K8s/k8s_yaml_files/08_node_selector.yaml
apiVersion: v1
kind: Pod
metadata:
    name: test-Pod
spec:
    containers:
    - name: test-container
      image: nginx
      ports:
        - containerPort: "80" 
          protocol: TCP
    nodeSelector:
      # <node-name>: <node-label>
      node1: web
