07_Learn-Kubernetes/K8s/k8s_yaml_files/13_scheduling_taint_toleration.yaml
apiVersion: v1
kind: Pod
metadata:
    name: test-toliration
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - taretPort: 80
  tolerations:
    - key: "taint-key"
      operator: "Equal"
      value: "taint-value"
      effect: "NoSchedule" # or "PreferNoSchedule", "NoExecute"
