07_Learn-Kubernetes/K8s/k8s_yaml_files/15_scheduling_daemonsets.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
    name: daemonset-test
spec:
    selector:
        matchLabels:
            app: daemonset-test-app
    template:
        metadata:
            name: daemonset-pod
            labels:
                app: daemonset-test-app
        spec:
            containers:
                - name: daemonset-cont
                  image: nginx
                  ports:
                    - containerPort: 80
