07_Learn-Kubernetes/K8s/k8s_yaml_files/16_Resource_Requirements_and_Limits.yaml
apiVersion: v1
kind: Pod
metadata:
    name: test
    labels:
        tier: frontend
spec:
    containers:
        - name: test-cont
          image: nginx
          ports:
            containerPort: 80
          resources:
            requests:
                memory: "1024M"
                cpu: "250m"
            limits:
                memory: "2048M"
                cpu: "1000m"
