07_Learn-Kubernetes/K8s/k8s_yaml_files/20_storage_persistent_volume_PV_PVC_part_1.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: storage-pod
spec:
  containers: 
    - name: storage-container
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: storage-volume
          mountPath: /usr/share/nginx/html
  volumes:
    - name: storage-volume
      persistentVolumeClaim:
        claimName: pvc-storage
