07_Learn-Kubernetes/K8s/k8s_yaml_files/21_storage_persistent_volume_PV_PVC _part_2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
spec:
  containers:
  - name: cont-1
    image: nginx
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: vol-1
      mountPath: /usr/share/nginx/html/

  volumes:
  - name: vol-1
    persistentVolumeClaim:
      claimName: pvc-1
