07_Learn-Kubernetes/K8s/k8s_yaml_files/22_confgiMaps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx-container
        image: nginx:alpine
        ports:
        - containerPort: 80
        
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf # just the file, not the whole directory

      volumes:
      - name: config-volume
        configMap:      # here we use types like emptyDir, hostPath, configMap, secret, etc.
          name: nginx-config

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-with-cm
  labels:
    env: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
        - name: app-containers
          image: nginx:kube
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
