07_Learn-Kubernetes/K8s/k8s_yaml_files/23_secret.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-db
spec:
  containers:
  - name: mysql
    image: mysql:8.4.5
    imagePullPolicy: IfNotPresent
